# ecommerce-mart

./: docker-compose.yaml  gateway-startup.sh  main.bicep
.github/workflows/: deploy.yml  inventory-deploy.yml  notification-deploy.yml  order-deploy.yml  payment-deploy.yml  product-deploy.yml  user-deploy.yml
assistant-service/: Dockerfile  pyproject.toml
assistant-service/app/: main.py
assistant-service/app/service/: payment_service.py
assistant-service/app/utils/: actions.py
assistant-service/app/web/: routes.py
inventory-service/: Dockerfile  pyproject.toml
inventory-service/.github/workflows/: deploy.yaml  inventory-service.yml  inventory.yml  service1-deploy.yml
inventory-service/app/: init_data.py  inventory.proto  main.py  setting.py
inventory-service/app/core/: db.py
inventory-service/app/model/: authentication.py  base.py  category_model.py  models.py
inventory-service/app/service/: inventory_service.py  product_size.py
inventory-service/app/utils/: action.py  admin_verify.py  auth.py
inventory-service/app/web/: routes.py
notification-services/: Dockerfile  pyproject.toml
notification-services/.github/workflows/: deploy.yaml  notification.yaml  notification.yml
notification-services/app/: inventory.proto  inventory_pb2.py  main.py  order.proto  product.proto  product_pb2.py  setting.py  user.proto  user_pb2.py
notification-services/app/core/: config.py  db.py
notification-services/app/kafka/: order_consumer.py  producer.py  product_consumer.py  user_consumer.py
notification-services/app/model/: authentication.py  models.py  order.py
notification-services/app/schemas/: order_emails.py  product_email.py  user_emails.py
notification-services/app/service/: notification_service.py  order_service.py  product_service.py
notification-services/app/utils/: actions.py  auth.py  date.py
notification-services/app/web/: routes.py
open-service/: Dockerfile  pyproject.toml
open-service/app/: main.py  order.proto  setting.py
open-service/app/model/: authentication.py  base.py  order.py  product.py
open-service/app/service/: open_service.py
open-service/app/utils/: actions.py
open-service/app/web/: routes.py
order-service/: Dockerfile  pyproject.toml
order-service/.github/workflows/: deploy.yaml  order.yaml  order.yml
order-service/app/: main.py  order.proto  order_pb2.py  setting.py
order-service/app/kafka/: order.py  producer.py
order-service/app/model/: authentication.py  base.py  cart.py  models.py  order.py  product.py
order-service/app/service/: cart_service.py  order_service.py
order-service/app/utils/: actions.py  admin_verify.py  user_verify.py
order-service/app/web/: cart_routes.py  order_routes.py  routes.py
payment-service/: Dockerfile  pyproject.toml
payment-service/.github/workflows/: deploy.yaml  payment.yaml  payment.yml
payment-service/app/: main.py  order.proto  order_pb2.py  setting.py  transaction.proto  transaction_pb2.py
payment-service/app/core/: db.py
payment-service/app/kafka/: payment.py
payment-service/app/model/: authentication.py  base.py  cart.py  models.py  order.py  product.py  transaction.py
payment-service/app/service/: payment_service.py
payment-service/app/utils/: actions.py
payment-service/app/web/: routes.py
product-service/: .gitignore  Dockerfile  pyproject.toml
product-service/.github/workflows/: deploy.yaml  product.yml  service5-deploy.yml
product-service/app/: main.py  product.proto  product_pb2.py  setting.py
product-service/app/core/: config.py  db.py
product-service/app/model/: authentication.py  base.py  category_model.py  models.py
product-service/app/routes/: csg_routes.py
product-service/app/service/: product_service.py
product-service/app/utils/: action.py  admin_verify.py  user_verify.py  utils.py
product-service/app/web/: csc_route.py  csg_route.py  csg_routes.py  review_route.py  route.py
user-service/: Dockerfile  client_secret.json  pyproject.toml
user-service/.github/workflows/: deploy.yaml  service6-deploy.yml  user.yml
user-service/alembic/: env.py
user-service/alembic/versions/: 5b8e29e986cb_database_created.py  c29be3e5e87b_database_created.py
user-service/app/: init_data.py  main.py  setting.py  user.proto  user_pb2.py
user-service/app/core/: config.py  db.py
user-service/app/kafka/: user_consumer.py  user_producer.py
user-service/app/model/: base.py  models.py
user-service/app/service/: auth.py  kong_consumer.py
user-service/app/utils/: auth.py
user-service/app/web/: admin_route.py  route.py
