[tool.poetry]
name = "open-service"
version = "0.1.0"
description = ""
authors = ["MuhammadAhsaanAbbasi <mahsaanabbasi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
pytest = "^8.0.2"
httpx = "^0.27.0"
itsdangerous = "^2.1.2"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240327"
python-multipart = "^0.0.9"
numpy = "^1.26.4"
tenacity = "^8.2.3"
resend = "^0.8.0"
types-requests = "^2.32.0.20240602"
email-validator = "^2.1.1"
openai = "^1.36.1"
pypdf = "^4.3.1"
pymupdf = "^1.24.9"
transformers = "^4.44.2"
pillow = "^10.4.0"
pytesseract = "^0.3.13"
imagehash = "^4.3.1"
deepdiff = "^7.0.1"
reportlab = "^4.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
