[tool.poetry]
name = "order-service"
version = "0.1.0"
description = ""
authors = ["MuhammadAhsaanAbbasi <mahsaanabbasi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
pytest = "^8.0.2"
httpx = "^0.27.0"
itsdangerous = "^2.1.2"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
resend = "^0.8.0"
types-requests = "^2.32.0.20240602"
protobuf = "^5.27.1"
aiokafka = "^0.10.0"
email-validator = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
